# hip8

./: hip8.cabal  runtests
src/: BitParser.hs  main.hs
src/Hip8/: BitParser.hs  Bitmap.hs  Display.hs  Instruction.hs  System.hs
test/Hip8/: BitParserSpec.hs  BitmapSpec.hs  DisplaySpec.hs  Generators.hs  InstructionSpec.hs  SystemSpec.hs
