name:                hip8
version:             0.1.0.0
author:              Emil Eriksson
maintainer:          shadewind@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable hip8
  main-is:              main.hs
  build-depends:        base >=4.6 && <4.7, transformers >=0.3 && <0.4
  hs-source-dirs:       src
  default-language:     Haskell2010

test-suite hip8-tests
  build-depends:        base >=4.6 && <4.7, transformers >=0.3 && <0.4,
                        hspec >= 1.9.0 && <1.10, QuickCheck >=2.7.1 && <2.8
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       src test
  default-language:     Haskell2010