name:                hip8
version:             0.1.0.0
author:              Emil Eriksson
maintainer:          shadewind@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable hip8
  main-is:              main.hs
  build-depends:        base >=4.6, transformers >=0.3 && <0.4, vector >=0.10.9.1 && <0.11
  hs-source-dirs:       src
  default-language:     Haskell2010

test-suite hip8-tests
  build-depends:        base >=4.6, transformers >=0.3 && <0.4,vector >=0.10.9.1 && <0.11,
                        hspec >= 1.9.0, QuickCheck >=2.7.1
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       src test
  default-language:     Haskell2010